--- a/css/dc.css
+++ b/css/dc.css
@@ -3,8 +3,7 @@
 /* @font-face usage */
 /* font stacks (help from here: http://css-tricks.com/snippets/css/font-stacks/) */
 /* monospaced:        font-family: 'PT Mono', Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace; */
-/* headlines, etc.:   font-family: 'Oswald', Calibri, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
-sans-serif; */
+/* headlines, etc.:   font-family: 'Oswald', Calibri, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif; */
 
 /* type declarations */
 body {
@@ -14,11 +13,52 @@ body {
 
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Oswald', Calibri, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
-sans-serif;
+}
+
+header h1 {
+  text-shadow: 0 1px 1px rgba(150,150,150,.5);
 }
 /* end type declarations */
 
 
-.text-centered {
-  text-align: center;
+/* ===================== */
+/* SLIDESHOW AND RELATED */
+/* ===================== */
+/* ===================== */
+/* ===================== */
+
+.canvas {
+  position: relative;
+  top:150px;
 }
+
+#slideshow {
+  position: relative;
+  top: -200px;
+}
+
+/* slideshow images (for most of the demos, these are the actual "slides") */
+.cycle-slideshow img { 
+    /* 
+    some of these styles will be set by the plugin (by default) but setting them here
+    helps avoid flash-of-unstyled-content
+    */
+    position: absolute; top: 0; left: 0;
+    width: 100%; padding: 0; display: block;
+}
+
+/* in case script does not load */
+.cycle-slideshow img:first-child {
+    position: static; z-index: 100;
+}
+
+/* pager */
+.cycle-pager { 
+    text-align: center; width: 100%; z-index: 500; overflow: hidden;
+}
+.cycle-pager span { 
+    font-family: arial; font-size: 50px; width: 16px; height: 16px; 
+    display: inline-block; color: #ddd; cursor: pointer; 
+}
+.cycle-pager span.cycle-pager-active { color: #D69746;}
+.cycle-pager > * { cursor: pointer;}
