--- a/css/dc.css
+++ b/css/dc.css
@@ -16,8 +16,10 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 header h1 {
-  text-shadow: 0 1px 1px rgba(150,150,150,.5);
+  text-shadow: 0 1px 1px rgba(77,77,77,1);
 }
+
+body, .muted { color: rgba(224,224,224,1); }
 /* end type declarations */
 
 
@@ -29,12 +31,12 @@ header h1 {
 
 .canvas {
   position: relative;
-  top:150px;
+  top:112px;
 }
 
 #slideshow {
   position: relative;
-  top: -200px;
+  top: -150px;
 }
 
 /* slideshow images (for most of the demos, these are the actual "slides") */
