--- a/css/dc.css
+++ b/css/dc.css
@@ -36,7 +36,6 @@ body, .muted { color: rgba(224,224,224,1); }
 
 #slideshow {
   position: relative;
-  top: -150px;
 }
 
 #slideshow p { color:rgba(77,77,77,1)}
@@ -47,8 +46,11 @@ body, .muted { color: rgba(224,224,224,1); }
     some of these styles will be set by the plugin (by default) but setting them here
     helps avoid flash-of-unstyled-content
     */
-    position: absolute; top: 0; left: 0;
-    width: 100%; padding: 0; display: block;
+    position: absolute; 
+    top: 0; 
+    left: 0;
+    padding: 0; 
+    display: block;
 }
 
 /* in case script does not load */
@@ -58,7 +60,11 @@ body, .muted { color: rgba(224,224,224,1); }
 
 /* pager */
 .cycle-pager { 
-    text-align: center; width: 100%; z-index: 500; overflow: hidden;
+  overflow: hidden;
+  position:relative;
+  text-align: center; 
+  top:25px;
+  z-index: 500; 
 }
 .cycle-pager span { 
     font-family: arial; font-size: 50px; width: 16px; height: 16px; 
@@ -66,3 +72,8 @@ body, .muted { color: rgba(224,224,224,1); }
 }
 .cycle-pager span.cycle-pager-active { color: #D69746;}
 .cycle-pager > * { cursor: pointer;}
+
+.toprow {height: 370px; margin-bottom: 30px;}
+.bottomrow {height: 120px; margin-bottom: 30px;}
+
+.slidenav, #prev, #next { position:relative; z-index: 499 !important; }
