updating the codebase, writing new styles, tweaking HTML to show “better” arrangement

--- a/css/dc.css
+++ b/css/dc.css
@@ -23,6 +23,9 @@ body, .muted { color: rgba(224,224,224,1); }
 /* end type declarations */
 
 
+/* post it colors */
+
+
 /* ===================== */
 /* SLIDESHOW AND RELATED */
 /* ===================== */
@@ -37,6 +40,9 @@ body, .muted { color: rgba(224,224,224,1); }
 #slideshow {
   position: relative;
 }
+
+#slideshow div.slide { display: none }
+#slideshow div.first { display: block }
 
 #slideshow p { color:rgba(77,77,77,1)}
 
