--- a/css/dc.css
+++ b/css/dc.css
@@ -1,14 +1,9 @@
-
 /* type declarations */
 body {
-  font-family: Calibri, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Calibri, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, Arial, sans-serif;
+  background: red;
 }
-
 /* end type declarations */
-
-
-/* post it colors */
-
 
 /* ===================== */
 /* SLIDESHOW AND RELATED */
@@ -16,55 +11,48 @@ body {
 /* ===================== */
 /* ===================== */
 
-.canvas {
-  position: relative;
-  top:112px;
-}
+.columnss { position: relative; }
 
-#slideshow {
-  position: relative;
-}
-
-#slideshow div.slide { display: none }
-
-#slideshow p { color:rgba(77,77,77,1) }
+#slideshow { position: relative; }
 
 /* slideshow images (for most of the demos, these are the actual "slides") */
 .cycle-slideshow img { 
-    /* 
-    some of these styles will be set by the plugin (by default) but setting them here
-    helps avoid flash-of-unstyled-content
-    */
-/*
-    position: absolute; 
-    top: 0; 
-    left: 0;
-*/
-    padding: 0; 
-    display: block;
+  padding: 0; 
+  display: block;
 }
 
 /* in case script does not load */
 .cycle-slideshow img:first-child {
-    position: static; z-index: 100;
+  position: static; z-index: 100;
 }
 
 /* pager */
 .cycle-pager { 
   overflow: hidden;
-  position:relative;
+  position: relative;
   text-align: center; 
-  top:25px;
+  top: 25px;
   z-index: 500; 
 }
 .cycle-pager span { 
-    font-family: arial; font-size: 50px; width: 16px; height: 16px; 
-    display: inline-block; color: #ddd; cursor: pointer; 
+  color: gray; 
+  cursor: pointer; 
+  display: inline-block; 
+  height: 16px; 
+  font-family: arial; 
+  font-size: 50px; 
+  width: 16px; 
 }
-.cycle-pager span.cycle-pager-active { color: #D69746;}
+.cycle-pager span.cycle-pager-active { color: red;}
 .cycle-pager > * { cursor: pointer;}
 
-.toprow {height: 370px; margin-bottom: 30px;}
-.bottomrow {height: 120px; margin-bottom: 30px;}
-
 .slidenav, #prev, #next { position:relative; z-index: 499 !important; }
+
+.purplebg  { background: rgba(228,204,230,1); }
+.bluebg    { background: rgba(179,217,254,1); }
+.greenbg   { background: rgba(166,218,144,1); }
+.yellowbg  { background: rgba(239,239,191,1); }
+
+.columnss .lead {
+  height:;
+}
