--- a/css/dc.css
+++ b/css/dc.css
@@ -81,3 +81,11 @@ img.canvas {
 img.unfold {
   margin: 0;
 }
+
+/* Einstein Quote */
+.slide h2.bigquote {
+  font-size: 400%;
+  line-height: 1.1;
+  text-indent: -25px;
+  padding: 1em 0;
+}
