--- a/css/dc.css
+++ b/css/dc.css
@@ -1,8 +1,23 @@
 /* type declarations */
 body {
   font-family: "Helvetica Neue", Helvetica, Calibri, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, Arial, sans-serif;
+  color: rgba(153,153,153,1);
 }
 /* end type declarations */
+
+/* main layout */
+header {
+  margin-top:1em;
+  margin-bottom:2em;
+  }
+
+header h1 {
+  font-size: 2em;
+}
+
+header h1 span {
+  color: rgba(88,139,161,1);
+}
 
 /* ===================== */
 /* SLIDESHOW AND RELATED */
@@ -30,7 +45,7 @@ body {
   z-index: 500; 
 }
 .cycle-pager span { 
-  color: gray; 
+  color: rgba(153,153,153,.5); 
   cursor: pointer; 
   display: inline-block; 
   height: 16px; 
@@ -38,7 +53,9 @@ body {
   font-size: 50px; 
   width: 16px; 
 }
-.cycle-pager span.cycle-pager-active { color: red;}
+.cycle-pager span.cycle-pager-active {
+  color: rgba(88,139,161,1);
+}
 .cycle-pager > * { cursor: pointer;}
 
 .slidenav, #prev, #next { position:relative; z-index: 499 !important; }
