--- a/css/dc.css
+++ b/css/dc.css
@@ -19,7 +19,8 @@ body {
 
 /* main layout */
 
-#intro.one.two.three {background: red !important;}
+#intro .pagedown {display: none;}
+#intro.one.two.three .pagedown {display: block;}
 
 header {
   margin-top:1em;
@@ -127,7 +128,7 @@ img.unfold {
 }
 
 /* Einstein Quote */
-.slide h2.bigquote {
+#quote h2.bigquote {
   font-size: 400%;
   line-height: 1.1;
   text-indent: -25px;
