--- a/css/dc.css
+++ b/css/dc.css
@@ -103,6 +103,9 @@ article.subsection {
   background: #444;
 }
 
+/* #slideshow nav controls */
+/* #slideshow nav controls */
+/* #slideshow nav controls */
 .slidenav { 
   display: block;
   position:relative; 
@@ -122,10 +125,26 @@ article.subsection {
   }
 
 .slidenav .row .span3 a { 
+  opacity: 0;
+  background: rgba(255,255,255,.75);
   font-size: 100px;
   line-height: 100px;
-  background: red;
+  text-align: center;
+  text-decoration: none;
+  color: rgba(88,139,161,1);
+  /**/
+  transition: opacity 1s;
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -ms-transition: opacity 1s;
+  -o-transition: opacity 1s;
   }
+.slidenav .row .span3 a:hover { 
+  opacity: 1;
+  }
+/* /end slideshow nav controls */
+/* /end slideshow nav controls */
+/* /end slideshow nav controls */
 
 .postit {
   padding: 20px;
@@ -191,6 +210,7 @@ img.unfold {
   font-weight: bold;
   text-indent: -25px;
   letter-spacing: 1px;
+  color: rgba(88,139,161,1); 
 }
 
 /* stacked images fading to text... */
