improving typesetting at start

--- a/css/dc.css
+++ b/css/dc.css
@@ -169,6 +169,9 @@ article.subsection {
   font-weight: bold;
   }
 
+p.indent { padding: 10px; }
+p.intro  { padding: 10px 28px; }
+
 .columnss .lead {
   height: 260px;
 }
