--- a/css/dc.css
+++ b/css/dc.css
@@ -40,7 +40,7 @@ header h1 span,
 
 article.subsection {
   margin-bottom: 500px;
-  padding-top: 80px;
+  padding-top: 90px;
 }
 
 #quote {
@@ -78,13 +78,13 @@ footer {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 60px;
+    height: 80px;
     z-index: 99999;
   }
 
   header .container {
     background: white;
-    padding: 1em 0 2em 0;
+    padding: 20px 0;
   }
 
 }
