--- a/css/dc.css
+++ b/css/dc.css
@@ -5,9 +5,6 @@ html {
   min-height: 101%;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  hyphens: auto;
 }
 
 body {
@@ -44,7 +41,7 @@ article.subsection {
   padding-top: 20px;
 }
 
-#quote {
+#quote, .linktosi {
   cursor: pointer;
 }
 
@@ -298,8 +295,9 @@ img.unfold {
 .fadeorder h2 {
   display: table-cell;
   height: 300px;
-  vertical-align: center;
+  vertical-align: middle;
   text-align: center;
+  width: 100%;
 }
 
 .fadeorder p {
