--- a/css/dc.css
+++ b/css/dc.css
@@ -53,6 +53,9 @@ footer {
   padding-top: 15px;
 }
 
+.no-bottom { margin-bottom: 0 !important;}
+.no-top    { margin-top: 0 !important;}
+
 /* nav styles */
 
 .nav-pills {
