breakup CSS into chunks

--- a/css/dc.css
+++ b/css/dc.css
@@ -18,6 +18,11 @@ body {
 
 /* end type declarations */
 
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
+
 /* main layout */
 
 #intro .pagedown {display: none; margin-top:40px;}
@@ -57,6 +62,11 @@ footer {
 
 .no-bottom { margin-bottom: 0 !important;}
 .no-top    { margin-top: 0 !important;}
+
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
 
 /* nav styles */
 
@@ -107,6 +117,11 @@ footer {
 }
 
 /* end nav styles */
+
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
 
 /* ===================== */
 /* SLIDESHOW AND RELATED */
@@ -208,6 +223,11 @@ footer {
 /* /end slideshow nav controls */
 /* /end slideshow nav controls */
 
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
+
 .postit {
   padding: 20px;
   margin: -10px -10px 10px -10px;
@@ -245,15 +265,6 @@ p.intro  { padding: 10px 28px; }
   width: 1140px;
 }
 
-/*
-.toprow.graybg {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 20px;
-  width: 980px;
-}
-*/
-
 .outdent {
   margin-left: 0;
 }
@@ -266,6 +277,11 @@ img.canvas {
 img.unfold {
   margin: 0;
 }
+
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
 
 /* Einstein Quote */
 #quote h2.bigquote {
@@ -308,6 +324,11 @@ img.unfold {
   z-index: 999999;
 }
 
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
+
 /* stacked images fading to text... */
 #revealing .reveal {
   position: relative;
@@ -342,6 +363,10 @@ img.unfold {
   margin-left: -160px;
 }
 
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
 
 /* EMAIL CAPTURE AT END */
 #stayinformed.jumbo h1 {
@@ -355,6 +380,10 @@ img.unfold {
   margin: .66em 0;
 }
 
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
+/* ======================================== */
 
 /* Various styling fixes */
 
