style tweak for auto ss
trying to fix FF bug

--- a/css/dc.css
+++ b/css/dc.css
@@ -337,9 +337,11 @@ img.unfold {
 #revealing .reveal .fadeorder {
   width: 300px;
   height:300px;
-  position: absolute;
-  top:0;
-  left:0;
+  display: none;
+}
+
+#revealing .reveal .one {
+  display: block;
 }
 
 .fadeorder h1 {
