--- a/css/dc.css
+++ b/css/dc.css
@@ -144,27 +144,15 @@ footer {
 }
 
 /* pager */
-.minipostit-pager,
-.cycle-pager { 
+.minipostit-pager { 
   overflow: hidden;
   position: relative;
   text-align: center; 
   height:50px;
   z-index: 500; 
 }
-.cycle-pager span { 
-  color: rgba(153,153,153,.5); 
-  cursor: pointer; 
-  display: inline-block; 
-  height: 16px; 
-  font-family: arial; 
-  font-size: 50px; 
-  width: 16px; 
-}
-.cycle-pager span.cycle-pager-active {
-  color: rgba(88,139,161,1);
-}
-.cycle-pager > * { cursor: pointer;}
+
+.minipostit-pager > * { cursor: pointer;}
 
 .minipostit-pager span {
   cursor: pointer; 
@@ -200,7 +188,6 @@ footer {
 .bottomalign {
   vertical-align: bottom;
   display: table-cell;
-  color: #444;
   font-weight: bold;
   }
 
