--- a/css/dc.css
+++ b/css/dc.css
@@ -6,10 +6,13 @@ html {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
 }
-
 body {
   font-family: "Helvetica Neue", Helvetica, Calibri, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, Arial, sans-serif;
   color: #444;
+}
+
+header h1 {
+  font-size: 2em;
 }
 
 .not-bold {font-weight: normal !important; }
@@ -24,17 +27,22 @@ body {
 /* ======================================== */
 
 /* main layout */
+.add-top    { margin-top:    40px; }
+.add-bottom { margin-bottom: 40px; }
+.no-top     { margin-top:    0 !important;}
+.no-bottom  { margin-bottom: 0 !important;}
 
-.add-top { margin-top: 60px; }
+html, body {
+  margin: 0; 
+  padding: 0;
+}
 
 header {
   background: white;
-  margin-top:1em;
-  margin-bottom:2em;
+  padding: 1em 0;
   }
 
 header h1 {
-  font-size: 2em;
   margin: 0;
   padding: 0;
 }
@@ -47,18 +55,16 @@ header h1 span,
 article.subsection {
   margin-bottom: 400px;
   padding-top: 100px;
+  cursor: pointer;
 }
 
-#quote, .linktosi {
-  cursor: pointer;
+#logic {
+  min-height: 550px;
 }
 
 footer {
   margin-bottom: 40px;
 }
-
-.no-bottom { margin-bottom: 0 !important;}
-.no-top    { margin-top: 0 !important;}
 
 /* ======================================== */
 /* ======================================== */
@@ -66,6 +72,8 @@ footer {
 /* ======================================== */
 
 /* nav styles */
+
+
 
 .nav-pills {
   margin-top: 4px;
@@ -82,12 +90,6 @@ footer {
   background: #588BA1;
 }
 
-/*
-.nav-pills > .active {
-  display: none;
-}
-
-*/
 @media (min-width: 980px) {
   header {
     position: fixed;
@@ -104,12 +106,9 @@ footer {
     background: white;
     padding: 20px 0;
   }
-
 }
 
-#logic {
-  min-height: 550px;
-}
+.pagedown {font-size: 36px;}
 
 /* end nav styles */
 
@@ -143,26 +142,26 @@ footer {
   overflow: hidden;
   position: relative;
   text-align: center; 
-  height:50px;
-  z-index: 500; 
+  height:30px;
+  margin-top: 20px;
+  z-index: 500;
 }
 
-.minipostit-pager > * { cursor: pointer;}
+.minipostit-pager, .minipostit-pager > * { cursor: pointer;}
 
 .minipostit-pager span {
   cursor: pointer; 
   display: inline-block; 
-  height: 20px; 
-  width: 20px; 
+  height: 30px; 
+  width: 30px; 
   overflow: hidden;
   text-indent: -9999999px;
-  margin: 0 2px;
+  margin: 0 4px;
 }
 
 .minipostit-pager span.cycle-pager-active {
   background: #444;
 }
-
 
 /* ======================================== */
 /* ======================================== */
@@ -187,8 +186,7 @@ footer {
   }
 
 p.indent { padding: 10px; }
-p.intro  { padding: 10px 28px; }
-
+p.intro  { padding: 10px 19px; font-size: 18px; margin-top: 20px;}
 .columnss .lead {
   height: 260px;
 }
@@ -223,33 +221,11 @@ img.canvas {
   }
 }
 
-
-
 /* ======================================== */
 /* ======================================== */
 /* ======================================== */
 /* ======================================== */
 
-/* Einstein Quote */
-#quote h2.bigquote {
-  font-size: 350%;
-  line-height: 1.1;
-  text-indent: -25px;
-  padding: 0 0 1em 0;
-}
-
-#quote .byline {
-  text-transform: uppercase;
-  font-size: 1.5em;
-  font-weight: bold;
-  text-indent: -25px;
-  letter-spacing: 1px;
-  color: #588BA1; 
-}
-
-#quote2 { 
- z-index: 1; 
-}
 
 .bigquote a {
   color: #588BA1;
