--- a/css/dc.css
+++ b/css/dc.css
@@ -73,8 +73,6 @@ footer {
 
 /* nav styles */
 
-
-
 .nav-pills {
   margin-top: 4px;
   margin-bottom: 0;
@@ -109,6 +107,56 @@ footer {
 }
 
 .pagedown {font-size: 36px;}
+
+/*Page Down animation*/
+@keyframes bounce{
+  0% {bottom: 36px;}
+  25% {bottom: 26px;}
+  50% {bottom: 36px;}
+  75% {bottom: 26px;}
+  100% {bottom: 36px;}
+}
+@-webkit-keyframes bounce{
+  0% {bottom: 36px;}
+  25% {bottom: 26px;}
+  50% {bottom: 36px;}
+  75% {bottom: 26px;}
+  100% {bottom: 36px;}
+}
+/*Page down link*/ 
+.pagedown {
+  background: none;
+  border: none;
+  padding: 0;
+  text-decoration: none;
+  animation: bounce;
+  animation-duration: 1s;
+  animation-timing-function: ease;
+  animation-delay: 3s;
+  -webkit-animation: bounce;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+  -webkit-animation-delay: 3s;
+}
+
+.pagedown a {
+  background: none;
+  border: none;
+  color: #588BA1;
+  padding: 0;
+  text-decoration: none;
+  transition: all 500ms;
+  -moz-transition: all 500ms;
+  -webkit-transition: all 500ms;
+  -ms-transition: all 500ms;
+  -o-transition: all 500ms;
+}
+
+.pagedown a:hover {
+  border: none;
+  color: #A6DA90;
+  text-decoration: none;
+}
 
 /* end nav styles */
 
