--- a/css/dc.css
+++ b/css/dc.css
@@ -58,10 +58,6 @@ article.subsection {
   cursor: pointer;
 }
 
-#logic {
-  min-height: 550px;
-}
-
 footer {
   margin-bottom: 40px;
 }
@@ -100,18 +96,18 @@ footer {
 
 /*Page Down animation*/
 @keyframes bounce{
-  0% {bottom: 36px;}
-  25% {bottom: 26px;}
-  50% {bottom: 36px;}
-  75% {bottom: 26px;}
-  100% {bottom: 36px;}
+  0%   { transform: translateY(0); }
+  25%  { transform: translateY(-15px); }
+  50%  { transform: translateY(-7px); }
+  75%  { transform: translateY(-15px); }
+  100% { transform: translateY(0); }
 }
 @-webkit-keyframes bounce{
-  0% {bottom: 36px;}
-  25% {bottom: 26px;}
-  50% {bottom: 36px;}
-  75% {bottom: 26px;}
-  100% {bottom: 36px;}
+  0%   { transform: translateY(0); }
+  25%  { transform: translateY(-15px); }
+  50%  { transform: translateY(-7px); }
+  75%  { transform: translateY(-15px); }
+  100% { transform: translateY(0); }
 }
 
 /*Page down link*/ 
@@ -121,14 +117,16 @@ footer {
   font-size: 36px;
   padding: 0;
   text-decoration: none;
-  animation: bounce;
-  animation-duration: 1s;
-  animation-timing-function: ease;
-  animation-delay: 3s;
-  -webkit-animation: bounce;
-  -webkit-animation-duration: 1s;
-  -webkit-animation-timing-function: ease;
-  -webkit-animation-delay: 3s;
+  /**/
+  transition: all 200ms;
+  -moz-transition: all 200ms;
+  -webkit-transition: all 200ms;
+  -ms-transition: all 200ms;
+  -o-transition: all 200ms;
+  animation: bounce 1s ease;
+  animation-delay:2s;
+  -webkit-animation: bounce 1s ease;
+  -webkit-animation-delay:2s;
 }
 
 .pagedown a {
