--- a/css/dc.css
+++ b/css/dc.css
@@ -1,5 +1,8 @@
+/* ======================================== */
+/* ======================================== */
 /* type declarations */
-
+/* ======================================== */
+/* ======================================== */
 html {
   color: #444;
   min-height: 101%;
@@ -10,15 +13,11 @@ body {
   font-family: "Helvetica Neue", Helvetica, Calibri, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, Arial, sans-serif;
   color: #444;
 }
-
 header h1 {
   font-size: 2em;
 }
-
 .not-bold {font-weight: normal !important; }
-
 .slide h3 { line-height: 30px; }
-
 a.no-style {
   color: inherit;
   text-decoration: none;
@@ -31,57 +30,47 @@ a.no-style:hover {
 
 /* ======================================== */
 /* ======================================== */
-/* ======================================== */
-/* ======================================== */
-
 /* main layout */
+/* ======================================== */
+/* ======================================== */
 .add-top    { margin-top:    40px; }
 .add-bottom { margin-bottom: 40px; }
 .no-top     { margin-top:    0 !important;}
 .no-bottom  { margin-bottom: 0 !important;}
-
 html, body {
   margin: 0; 
   padding: 0;
 }
-
 header {
   background: white;
   padding: 1em 0;
   }
-
 header h1 {
   margin: 0;
   padding: 0;
 }
-
 header h1 span,
 .jumbo span {
   color: #588BA1;
 }
-
-article.subsection {
+article.subsection, article.main section {
   margin-bottom: 400px;
   padding-top: 100px;
 }
-
 footer {
   margin-bottom: 40px;
 }
 
 /* ======================================== */
 /* ======================================== */
-/* ======================================== */
-/* ======================================== */
-
 /* nav styles */
+/* ======================================== */
+/* ======================================== */
 #menu h1 a, #menu h1 a:hover {text-decoration: none;}
-
 .nav-pills {
   margin-top: 4px;
   margin-bottom: 0;
 }
-
 .nav-pills > li > a {
   color: #588BA1;
   margin-right: 4px;
@@ -91,9 +80,7 @@ footer {
 .nav-pills > .active > a:focus {
   background: #588BA1;
 }
-
 li.disabled {display: none;}
-
 @media (min-width: 980px) {
   header {
     position: fixed;
@@ -109,6 +96,7 @@ li.disabled {display: none;}
   background: none;
   border: none;
   font-size: 36px;
+  line-height: 36px;
   padding: 0;
 }
 
@@ -116,6 +104,9 @@ li.disabled {display: none;}
   background: none;
   border: none;
   color: #588BA1;
+  display: block;
+  font-size: 36px;
+  line-height: 36px;
   padding: 0;
   text-decoration: none;
   transition: all 500ms;
@@ -135,32 +126,23 @@ li.disabled {display: none;}
 
 /* ======================================== */
 /* ======================================== */
-/* ======================================== */
-/* ======================================== */
-
-/* ===================== */
 /* SLIDESHOW AND RELATED */
-/* ===================== */
+/* ======================================== */
+/* ======================================== */
 .columnss { position: relative; cursor: pointer; }
-#slideshow { position: relative; }
 .slide {display: none;}
 .slide:first-child {display: block;}
-
 .slide img { 
   padding: 0; 
   display: block;
 }
-
+.columnss img { width: 300px; }
 .cycle-slideshow .slide img:first-child {
   position: static; z-index: 100;
 }
-
 a.invsbl, a.invsbl:hover {
   text-decoration: none !important;
 }
-
-/* hide first and last prev/next buttons... */
-.ssbtn .disabled {visibility: hidden;}
 
 /* pager */
 .minipostit-pager { 
@@ -187,28 +169,6 @@ a.invsbl, a.invsbl:hover {
 .minipostit-pager span.cycle-pager-active {
   background: #444;
 }
-
-.ssbtn {
-  font-size: 40px;
-  font-weight: bold;
-  line-height: 40px;
-  margin-top: 10px;
-}
-
-.ssbtn a {
-  color: #C8C994;
-  display: block;
-  font-size: 40px;
-  font-weight: bold;
-  line-height: 40px;
-}
-
-.ssbtn a:hover {
-  text-decoration: none;
-  color: #444;
-}
-
-.prev {text-align: right;}
 
 /* ======================================== */
 
@@ -262,32 +222,25 @@ img.canvas {
   }
 }
 
-
-
-
 /* ======================================== */
 /* ======================================== */
-/* IN BETWEEN SECTIONS *?
+/* IN BETWEEN SECTIONS */
 /* ======================================== */
 /* ======================================== */
-
-
-#inbetween h1 {
+#dhashc h1 {
   font-size: 100px;
   padding: 60px 0;
 }
 
-#inbetween p.lead {
+#dhashc p.lead {
   font-size: 32px;
 }
 
-
 /* ======================================== */
 /* ======================================== */
-/* ======================================== */
-/* ======================================== */
-
 /* EMAIL CAPTURE AT END */
+/* ======================================== */
+/* ======================================== */
 #stayinformed.jumbo h1 {
   font-size: 4em;
   margin-bottom: 1em;
@@ -304,7 +257,3 @@ img.canvas {
 /* ======================================== */
 /* ======================================== */
 
-/* Various styling fixes */
-
-/* img { width: 100%; } */
-.columnss img { width: 300px; }
