--- a/css/dc.css
+++ b/css/dc.css
@@ -26,6 +26,7 @@ a.no-style:hover {
   text-decoration: none;
   border-bottom: 2px solid;
 }
+span.light, h3 span.light {font-weight: 400 !important;}
 /* end type declarations */
 
 /* ======================================== */
