updating CSS for non-mediaquery finding stuff

--- a/css/dc.css
+++ b/css/dc.css
@@ -57,7 +57,7 @@ header h1 span,
 }
 article section {
   margin-bottom: 400px;
-  padding-top: 100px;
+  padding-top: 20px;
 }
 
 footer {
@@ -93,6 +93,11 @@ footer {
     width: 100%;
     z-index: 99999;
   }
+  article section {
+    margin-bottom: 400px;
+    padding-top: 100px;
+  }
+
 }
 
 /*Page down link*/ 
